--- a/content/index.html
+++ b/content/index.html
@@ -12,7 +12,7 @@ h1,h2,h3{line-height:1.2}</style></head>
 
 
 <body>
-<header><h1>This is <em>The</em> Cloudfoundations website.</h1>
+<header><h1>This is <em>The</em> Cloud Foundations website.</h1>
 </header>
 
 <h2>This is h2.</h2>
