Update Dominator "Role" entry.

--- a/content/index.html
+++ b/content/index.html
@@ -44,7 +44,7 @@ The cloudfoundations tools include:
 	</tr>
 	<tr>
 		<td><a href="https://github.com/Cloud-Foundations/Dominator">Dominator</a></td>
-		<td> borg/clone</td>
+		<td>Image-based deploy and patching</td>
 		<td></td>
 	</tr>
 	<tr>
