Update Dominator "Documents" entry.

--- a/content/index.html
+++ b/content/index.html
@@ -45,11 +45,11 @@ The cloudfoundations tools include:
 	<tr>
 		<td><a href="https://github.com/Cloud-Foundations/Dominator">Dominator</a></td>
 		<td>Image-based deploy and patching</td>
-		<td></td>
+		<td><a href="https://github.com/Cloud-Foundations/Dominator/blob/master/design-docs/Dominator/README.md">Design Doc</td>
 	</tr>
 	<tr>
 		<td><a href="https://github.com/Cloud-Foundations/cloud-gate">Cloud-Gate</a></td>
-                <td> AWS access broker</td>
+                <td>AWS access broker</td>
                 <td></td>
 	</tr>
 
