Add link to Cloud-Gate design document.

--- a/content/index.html
+++ b/content/index.html
@@ -50,7 +50,7 @@ The cloudfoundations tools include:
 	<tr>
 		<td><a href="https://github.com/Cloud-Foundations/cloud-gate">Cloud-Gate</a></td>
                 <td>AWS access broker</td>
-                <td></td>
+                <td><a href="http://bit.ly/356rtXp">Design Doc</td>
 	</tr>
 
 </table>
