adding image as svg with clickable links

--- a/content/index.html
+++ b/content/index.html
@@ -54,6 +54,15 @@ The cloudfoundations tools include:
 	</tr>
 
 </table>
+
+<p>
+Their relationships can be visualized here:
+</p>
+<p>
+<object data="images/daemon-relationships.svg" type="image/svg+xml" alt="deamon relationships graph" width="100%">
+</object>
+</p>
+
 <hr>
 <h2>Some final remarks</h2>
 <p>
