--- a/content/index.html
+++ b/content/index.html
@@ -59,8 +59,7 @@ The cloudfoundations tools include:
 Their relationships can be visualized here:
 </p>
 <p>
-<object data="images/daemon-relationships.svg" type="image/svg+xml" alt="deamon relationships graph" width="100%">
-</object>
+<img src="images/daemon-relationships.svg" alt="deamon relationships graph" width="100%"/>
 </p>
 
 <hr>
