--- a/content/index.html
+++ b/content/index.html
@@ -25,7 +25,7 @@ table, th, td {
 
 <h2>Where these tools come from?</h2>
 <p>
-The Cloud Foundations tools come primiarity from the work started at symantec corporation for the cloud-platform enginneering division.
+The Cloud Foundations tools come primiarity from the work started at Symantec corporation for the cloud-platform enginneering division.
 </p>
 <h2>The Cloud Foundations Ecosystem</h2>
 <p>
